--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.1",
     "resend": "^4.0.1-alpha.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
